--- a/src/assets/styles/ThemeSelect.scss
+++ b/src/assets/styles/ThemeSelect.scss
@@ -7,20 +7,19 @@
   max-width: 150px;
   gap: 10px;
 
-  .switch {
+  &__switch {
     position: relative;
     display: inline-block;
     width: 60px;
     height: 34px;
-  }
 
-  .switch input {
-    opacity: 0;
-    width: 0;
-    height: 0;
+    input {
+      opacity: 0;
+      width: 0;
+      height: 0;
+    }
   }
-
-  .slider {
+  &__slider {
     position: absolute;
     cursor: pointer;
     top: 0;
@@ -29,6 +28,7 @@
     bottom: 0;
     background-color: var(--slider-background-color);
     transition: background-color 0.1s linear;
+    border-radius: 34px;
 
     &:before {
       position: absolute;
@@ -39,18 +39,11 @@
       bottom: 4px;
       background-color: white;
       transition: 0.4s;
-    }
-  }
-
-  input:checked + .slider:before {
-    transform: translateX(26px);
-  }
-
-  .slider.round {
-    border-radius: 34px;
-
-    &:before {
       border-radius: 50%;
     }
   }
+  input:checked + .theme-select__slider:before {
+    transform: translateX(26px);
+  }
 }
+
